--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "mysql2": "^3.14.4",
+    "nodemon": "^3.1.10",
+    "sequelize": "^6.37.7"
   }
 }
