--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "projeto",
+  "name": "node-novo",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mysql2": "^3.14.4",
-    "nodemon": "^3.1.10",
+    "mysql2": "^3.14.5",
     "sequelize": "^6.37.7"
   }
 }
