--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mysql2": "^3.14.5",
+    "express-session": "^1.18.2",
+    "mysql2": "^3.15.2",
     "sequelize": "^6.37.7"
   }
 }
